# privacy-shield-payments

./: .gitignore  Cargo.toml  PRD.md  README.md  architecture.md
.github/workflows/: ci.yml
contracts/shield/: Cargo.toml
contracts/shield/src/: disclosure.rs  errors.rs  lib.rs  pool.rs  proof.rs  transfer.rs  types.rs
docs/: interface.md  threat-model.md
